Head2head backend

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongodb": "^3.5.5",
+    "node-fetch": "^2.6.0",
     "readline-sync": "^1.4.10",
     "slp-parser-js": "^4.1.0"
   }
